2006-07-12  Mike Frysinger  <vapier@gentoo.org>:
	    Daniel Jacobowitz  <dan@codesourcery.com>

	* Makefile.in (init.c) [LANG, LC_ALL]: Set to `c'.
	* gdb_indent.sh, gdb_mbuild.sh, observer.sh: Likewise.
	* gdbarch.sh: Correct comment.

2006-07-12  Daniel Jacobowitz  <dan@codesourcery.com>

	* MAINTAINERS: Add Alfred Szmidt for the Hurd.

2006-07-11  Mark Kettenis  <kettenis@gnu.org>

	* alpha-tdep.h (ALPHA_INSN_SIZE): New define.

2006-07-10  Mark Kettenis  <kettenis@gnu.org>

	* alphaobsd-tdep.c: New file.
	* alphanbsd-tdep.c (_initialize_alphanbsd_tdep): Do not register a
	handler for GDB_OSABI_OPENBSD_ELF.
	* Makefile.in (ALLDEPFILES): Add alphaobsd-tdep.c.
	(alphaobsd-tdep.o): New target.
	* config/alpha/obsd.mt: New file.
	* configure.tgt (alpha*-*-openbsd*): Set gdb_target to obsd.

2006-07-10  Richard Henderson  <rth@redhat.com>

	* alpha-tdep.h (struct gdbarch_tdep): Add return_in_memory.
	* alpha-tdep.c (alpha_register_byte): Remove.
	(alpha_extract_struct_value_address): Remove.
	(alpha_return_value): New.
	(alpha_return_in_memory_always): New.
	(alpha_gdbarch_init): Set tdep->return_in_memory.  Don't call
	set_gdbarch_deprecated_register_byte.  Do call set_gdbarch_return_value
	instead of set_gdbarch_deprecated_use_struct_convention,
	set_gdbarch_extract_return_value, set_gdbarch_store_return_value,
	or set_gdbarch_deprecated_extract_struct_value_address.
	* alphafbsd-tdep.c (alphafbsd_return_in_memory): Rename from
	alphafbsd_use_struct_convention, remove gcc_p argument.
	(alphafbsd_init_abi): Set tdep->return_in_memory instead of
	set_gdbarch_deprecated_use_struct_convention.

2006-07-09  Mark Kettenis  <kettenis@gnu.org>

	* alphabsd-tdep.h (alphanbsd_regset_from_core_section): New
	prototype.
	* alphanbsd-tdep.c (alphanbsd_regset_from_core_section): Handle
	a.out-style core file format here.  Make global.
	(alphanbsd_regset_from_core_section): Remove.
	(alphanbsd_sigtramp_offset): Make static.
	(alphanbsd_aout_init_abi): Remove.